# OrnithopterMorphingGlider

./: .gitignore  CLAUDE.md  README.md  morphing_glider.py  pyproject.toml  requirements.txt  run_simulation.py
morphing_glider/: __init__.py  calibration.py  config.py
morphing_glider/controllers/: __init__.py  heuristic.py  lqr.py  mpc.py  pid.py  sb3_controller.py  zero.py
morphing_glider/environment/: __init__.py  env.py  observation.py  reward.py  wrappers.py
morphing_glider/evaluation/: __init__.py  evaluate.py  metrics.py  robustness.py
morphing_glider/interpretability/: __init__.py  dagger.py  kan.py  latent_space.py  machine_teaching.py  sensitivity.py  strategy_analyzer.py  symbolic.py
morphing_glider/physics/: __init__.py  aero_proxy.py  bezier_spar.py  domain_randomizer.py  validators.py
morphing_glider/reporting/: __init__.py  methods.py  reproducibility.py  statistics.py
morphing_glider/training/: __init__.py  baseline.py  curriculum.py  infrastructure.py
morphing_glider/utils/: __init__.py  numeric.py  quaternion.py  visualization.py
tests/: test_bezier_spar.py  test_config.py  test_controllers.py  test_numeric.py  test_observation.py  test_quaternion.py  test_reward.py
